--- a/Download/install/Linux/x86/Makefile.include
+++ b/Download/install/Linux/x86/Makefile.include
@@ -52,10 +52,10 @@ build_references_ref += $(call q2s,$(foreach ref, $(call s2q,$(DLL_REFERENCES)),
 build_references_ref += $(call q2s,$(foreach ref, $(call s2q,$(PROJECT_REFERENCES)), -r:$(ref)))
 
 s2q2s=$(call unesc2,$(call s2q,$1))
-cp_actual=test -z $1 || cp $1 $2
+cp_actual=test -z $1 || cp -fr $1 $2
 cp=$(call cp_actual,'$(call s2q2s,$1)','$(call s2q2s,$2)')
 
-rm_actual=test -z '$1' || rm -f '$2'
+rm_actual=test -z '$1' || rm -fr '$2'
 rm=$(call rm_actual,$(call s2q2s,$1),$(call s2q2s,$2)/$(shell basename '$(call s2q2s,$1)'))
 
 EXTRA_DIST += $(build_sources) $(build_resx_files) $(build_others_files) $(ASSEMBLY_WRAPPER_IN) $(EXTRAS) $(DATA_FILES) $(build_culture_res_files)
@@ -76,7 +76,7 @@ programfiles_DATA = $(PROGRAMFILES)
 define emit-deploy-target
 $($1): $($1_SOURCE)
 	mkdir -p '$$(shell dirname '$$@')'
-	cp '$$<' '$$@'
+	cp -fr '$$<' '$$@'
 endef
 
 # $(call emit-deploy-wrapper,wrapper-variable-name,wrapper-sourcefile,x)
@@ -85,7 +85,7 @@ endef
 define emit-deploy-wrapper
 $($1): $2 $(top_srcdir)/config.make
 	mkdir -p '$$(shell dirname '$$@')'
-	cp '$$<' '$$@'
+	cp -fr '$$<' '$$@'
 	$(if $3,chmod +x '$$@')
 
 $2: $2.in $(top_srcdir)/config.make
